--- a/index.html
+++ b/index.html
@@ -4,35 +4,37 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculator</title>
+    <title>CalculatorIphone</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="calc">
       <div class="calc-screen">
-        <p maxlength = "6" id="zero">0</p>
+        <p id="Output">0</p>
       </div>
-      <div  class="buttons"></div>
-      <div onclick="btnAC" class="btn" id="btnAC" class="btnAC">ac</div>
-      <div onclick="btnPlusMinus" class="btn" id="btnPlusMinus" >+/-</div>
-      <div onclick="btnPercent" class="btn" id="btnPercent" >%</div>
-      <div onclick="btnDivision" class="btn" id="btnDivision">/</div>
-      <div onclick="btn7" id="btn7" class="btn" >7</div>
-      <div onclick="btn8" id="btn8" class="btn" >8</div>
-      <div onclick="btn9" id="btn9" class="btn" >9</div>
-      <div onclick="btnMultiplication" class="btn" id="btnMultiplication">x</div>
-      <div onclick="btn4" id="btn4" class="btn" >4</div>
-      <div onclick="btn5" id="btn5" class="btn" >5</div>
-      <div onclick="btn6" id="btn6" class="btn" >6</div>
-      <div onclick="btnMinus" class="btn" id="btnMinus" >-</div>
-      <div onclick="btn1" class="btn" id="btn1" >1</div>
-      <div onclick="btn2" class="btn" id="btn2" >2</div>
-      <div onclick="btn3" class="btn" id="btn3" >3</div>
-      <div onclick="btnPlus" class="btn" id="btnPlus" >+</div>
-      <div onclick="btn0" class="btn" id="btn0" >0</div>
-      <div onclick="btnDot" class="btn" id="btnDot" >.</div>
-      <div onclick="btnWillBe" class="btn" id="btnEqual" >=</div>
-    </div>
+      <div onclick="btnAC"  class = "btn color-gray" id="btnAC" class="btnAC" >ac</div>
+      <div onclick="btnPlusMinus" class = "btn color-gray" id="btnPlusMinus" >+/-</div>
+      <div onclick="btnPercent" class = "btn color-gray" id="btnPercent" >%</div>
+      <div onclick="btnDivision" class = "btn color-orange" id="btnDivision">/</div>
+
+      <div onclick="btn7" class = "btn color-darkgray" id="btn7" >7</div>
+      <div onclick="btn8" class = "btn color-darkgray" id="btn8" >8</div>
+      <div onclick="btn9" class = "btn color-darkgray" id="btn9" >9</div>
+      <div onclick="btnMultiplication" class = "btn color-orange" id="btnMultiplication">x</div>
+
+      <div onclick="btn4" class = "btn color-darkgray" id="btn4" >4</div>
+      <div onclick="btn5" class = "btn color-darkgray" id="btn5" >5</div>
+      <div onclick="btn6" class = "btn color-darkgray" id="btn6" >6</div>
+      <div onclick="btnMinus" class = "btn color-orange" id="btnMinus" >-</div>
+
+      <div onclick="btn1" class = "btn color-darkgray" id="btn1" >1</div>
+      <div onclick="btn2" class = "btn color-darkgray" id="btn2" >2</div>
+      <div onclick="btn3" class = "btn color-darkgray" id="btn3" >3</div>
+      <div onclick="btnPlus" class = "btn color-orange" id="btnPlus" >+</div>
+
+      <div onclick="btn0" class = "btn color-gray"  id="btn0" >0</div>
+      <div onclick="btnDot" class = "btn color-darkgray" id="btnDot" >.</div>
+      <div onclick="btnEqual" class = "btn color-orange" id="btnEqual" >=</div>
     </div>
     <script src="calc.js"></script>
   </body>
